--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "lint": "eslint src",
     "lint:fix": "eslint src --fix",
     "format": "prettier --write src/**/*.ts",
+    "start": "node dist/server.js",
+    "vercel-build": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -22,6 +24,7 @@
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
+    "serverless-http": "^3.2.0",
     "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
